# dspy-prompt-optimizer

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  .sourcery.yaml  AGENTS.md  CLAUDE.md  README.md  __init__.py  __main__.py  cli.py  mypy.ini  optimizer.py  pyproject.toml  pyrightconfig.json  pyrightconfig.strict.json  setup.py
.cursor/rules/: 001_workspace.mdc  002_cursor_rules.mdc  100_python_standards.mdc  101_type_safety.mdc  102_error_handling.mdc  103_logging_standards.mdc  104_oop_principles.mdc  105_complexity_management.mdc  106_linting.mdc  200_testing_standards.mdc  300_environment_setup.mdc  301_git_workflow.mdc  400_code_organization.mdc
dspy/: __init__.py  __init__.pyi
prompt_optimizer/: __init__.py  __main__.py  cli.py  example_generator.py  history.py  optimizer.py
prompt_optimizer/cli/: __init__.py  common.py  example_cmd.py  generate_examples_cmd.py  metric_cmd.py  self_cmd.py
prompt_optimizer/optimizer/: __init__.py  base.py  example_based.py  factory.py  metric_based.py  self_refinement.py  strategies.py
prompt_optimizer/optimizer/example_based/: __init__.py  generator.py  optimizer.py
scripts/: e2e_test.sh  lint.sh
tests/: test_cli.py  test_optimizer.py
typings/: dspy.pyi
typings/dspy/: __init__.pyi
